--- a/.navigate/README_ntzechwchu.html
+++ b/.navigate/README_ntzechwchu.html
@@ -1,4 +1,4 @@
-<p><img alt="" src="" /></p>
+<p><img alt="Logo" src="https://github.com/EDS-Bioinformatics-Laboratory/ENCORE_AUTOMATION/blob/main/Manuscript/ENCORE_v22_MetaArXiv/Figures/ENCORE-logo.png" /></p>
 <h3>ENCORE AUTOMATION</h3>
 <p><strong>Project start date</strong>: 15 May 2024</p>
 <p><strong>Project description + goals</strong></p>
