--- a/.navigate/0_PROJECT_imwfooahvu.html
+++ b/.navigate/0_PROJECT_imwfooahvu.html
@@ -1,5 +1,5 @@
 <p><img alt="" src="" /></p>
-<h3>ENCORE AUTOMATION</h3>
+<h3>ENCORE_AUTOMATION</h3>
 <p><strong>Project start date</strong>: 15 May 2024</p>
 <p><strong>Main contact</strong> (project leader)</p>
 <ul>
