--- a/.navigate/0_README_processing-computation_qdcjsuxaao.html
+++ b/.navigate/0_README_processing-computation_qdcjsuxaao.html
@@ -16,7 +16,7 @@
 <p>Python 3</p>
 <p>Versions of other software is documented in ./Results/versions/</p>
 <p><strong>Conceptual description of methodology</strong> </p>
-<p>See ./Code/reseda/README.md</p>
+<p>See ./Code/<ANALYSIS_NAME>/README.md</p>
 <p><em>Subdirectories</em></p>
 <ul>
 <li><em><strong>Code</strong>. Contains the (in-house developed) software used for the computational analysis.</em></li>
