--- a/.navigate/README_hdugwwznrw.html
+++ b/.navigate/README_hdugwwznrw.html
@@ -9,5 +9,5 @@
 <p><strong>2-CREATE-TEMPLATE-REPSEQ</strong></p>
 <p>This directory contains a script that automates the creation of an ENCORE project for adaptive immune receptor repertoire sequencing (AIRseq). This template contains the RESEDA pipeline for doing the analysis.  </p>
 <ul>
-<li>See <a href="https://github.com/EDS-Bioinformatics-Laboratory/ENCORE_AUTOMATION/blob/main/Processing/2%20-%20CREATE-TEMPLATE-REPSEQ/README.md">details</a></li>
+<li>See <a href="https://github.com/EDS-Bioinformatics-Laboratory/ENCORE_AUTOMATION/blob/main/Processing/2-CREATE-TEMPLATE-REPSEQ/README.md">details</a></li>
 </ul>
