--- a/.navigate/0_project.html
+++ b/.navigate/0_project.html
@@ -1,5 +1,5 @@
 <hr class='rounded'><p style="color:blue;font-size:20px;"><strong>Project information</strong></p><hr class='rounded'><p><img alt="" src="" /></p>
-<h3>ENCORE AUTOMATION</h3>
+<h3>ENCORE_AUTOMATION</h3>
 <p><strong>Project start date</strong>: 15 May 2024</p>
 <p><strong>Main contact</strong> (project leader)</p>
 <ul>
