--- a/.navigate/github_egetjdgkzz.html
+++ b/.navigate/github_egetjdgkzz.html
@@ -1,6 +1,6 @@
 <h1>Git</h1>
-<p><code>git clone git@github.com:EDS-Bioinformatics-Laboratory/reseda.git
-cd reseda
+<p><code>git clone &lt;ANALYSIS&gt;
+cd &lt;ANALYSIS_NAME&gt;
 git branch &lt;RUN&gt;
 git checkout &lt;RUN&gt;
 git pull origin &lt;RUN&gt;</code></p>
